<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_menu_inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_pintor"
            android:icon="@drawable/ic_menu_pintor"
            android:title="@string/menu_pintor" />
        <item
            android:id="@+id/nav_escultor"
            android:icon="@drawable/ic_menu_escultor"
            android:title="@string/menu_escultor" />
        <item
            android:id="@+id/nav_cientifico"
            android:icon="@drawable/ic_menu_cientifico"
            android:title="@string/menu_cientifico" />
        <item
            android:id="@+id/nav_inventor"
            android:icon="@drawable/ic_menu_inventor"
            android:title="@string/meno_inventor" />


    </group>
</menu>